vercre-holder/tests/snapshots/preauth_no_grants_2__auth_request.snap
---
source: vercre-holder/tests/preauth_no_grants_2.rs
assertion_line: 114
expression: auth_request
snapshot_kind: text
---
credential_issuer: "http://vercre.io"
response_type: code
client_id: 96bfb9cb-0513-7d64-5532-bed74c48f9ab
redirect_uri: "http://localhost:3000/callback"
state: "[state]"
code_challenge: "[code_challenge]"
code_challenge_method: S256
authorization_details:
  - type: openid_credential
    credential_configuration_id: EmployeeID_JWT
    credential_definition:
      credentialSubject:
        address:
          country:
            value_type: string
            display:
              - name: Country
                locale: en-NZ
          locality:
            value_type: string
            display:
              - name: Locality
                locale: en-NZ
          region:
            value_type: string
            display:
              - name: Region
                locale: en-NZ
          street_address:
            value_type: string
            display:
              - name: Street Address
                locale: en-NZ
        email:
          mandatory: true
          value_type: string
          display:
            - name: Email
              locale: en-NZ
        family_name:
          mandatory: true
          value_type: string
          display:
            - name: Family name
              locale: en-NZ
        given_name:
          mandatory: true
          value_type: string
          display:
            - name: Given name
              locale: en-NZ
resource: "http://vercre.io"
subject_id: normal_user
user_hint: "[user_hint]"
